@@ -1,14 +1,8 @@
-package http;
-
-import http.header.RequestHeader;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import webserver.WebServer;
+package webserver.http;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -17,14 +11,16 @@ public class HttpRequest {
     private final String url;
     private final String method;
     private Map<String, String> queryString;
-    private static final Logger logger = LoggerFactory.getLogger(HttpRequest.class);
-    private RequestHeader requestHeader;
+    private RequestHeader header;
 
-    private HttpRequest(String method, String url, Map<String, String> queryString, RequestHeader requestHeader) {
+    private RequestBody body;
+
+    private HttpRequest(String method, String url, Map<String, String> queryString, RequestHeader header, RequestBody body) {
         this.method = method;
         this.url = url;
         this.queryString = queryString;
-        this.requestHeader = requestHeader;
+        this.header = header;
+        this.body = body;
     }
 
     public static HttpRequest createFromReader(BufferedReader reader) throws IOException {
@@ -47,13 +43,21 @@ public class HttpRequest {
                 if (query_split.length != 2 || query_split[1].isBlank())
                     throw new IOException("Incorrect Query String");
 
-                query_split[1] = URLDecoder.decode(query_split[1], StandardCharsets.UTF_8);
+                query_split[1] = URLDecoder.decode(query_split[1], "UTF-8");
                 queryString.put(query_split[0], query_split[1]);
             }
         }
+
         RequestHeader header = RequestHeader.createFromReader(reader);
 
-        return new HttpRequest(method, url, queryString, header);
+        RequestBody body = RequestBody.createEmptyBody();
+
+        if (!header.getHeaderProperty("Content-Length").isBlank()) {
+            int contentLength = Integer.parseInt(header.getHeaderProperty("Content-Length"));
+            body = RequestBody.createFromReader(reader, contentLength);
+        }
+
+        return new HttpRequest(method, url, queryString, header, body);
     }
 
 
@@ -68,9 +72,32 @@ public class HttpRequest {
     public Map<String, String> getQueryString() {
         return queryString;
     }
+    public RequestBody getBody() {
+        return body;
+    }
 
-    public RequestHeader getRequestHeader() {
-        return requestHeader;
+    public String getHeaderProperty(String key) {
+        return header.getHeaderProperty(key);
+    }
+
+    public Map<String, String> getCookie() throws IOException {
+        String cookie = header.getHeaderProperty("Cookie");
+        if (cookie.isBlank())
+            return Map.of();
+
+        Map<String, String> result = new HashMap<>();
+        String[] propertyString = cookie.split(";");
+
+        for (String property : propertyString) {
+            String[] property_split = property.split("=");
+
+            if (property_split.length != 2 || property_split[1].isBlank())
+                continue;
+            property_split[1] = URLDecoder.decode(property_split[1], "UTF-8");
+            result.put(property_split[0].trim(), property_split[1].trim());
+        }
+
+        return result;
     }
 
     @Override
@@ -81,6 +108,6 @@ public class HttpRequest {
 
         return "HttpRequest(method = " + method + ",url = " +
                 url + ", queryString = {" + query +
-                "}, header = {" + requestHeader.toString() + "})";
+                "}, header = {" + header.toString() + "})";
     }
 }
